修改了title和标题

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>108班座位表</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/Swiper/4.3.0/css/swiper.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.css">
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header-txt1">
             <i class="fa fa-group fa1"></i>
-            <h2>座位表</h2>
+            <h2>108班座位表</h2>
         </div>
         <div class="header-txt2">
             <a href="#"><p class="header-btn"><i class="fa fa-caret-down"></i>使用提示</p></a>
